@@ -5,6 +5,7 @@ import com.AL565.prose.repository.*;
 import com.AL565.prose.security.JwtTokenProvider;
 import com.AL565.prose.service.dto.notifications.NotificationsResponseDTO;
 import com.AL565.prose.security.exceptions.NotificationExceptions;
+import com.AL565.prose.utils.NotificationsHelper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -48,12 +49,22 @@ class NotificationsServiceLayerTest {
     @Mock
     private GestionnaireCvNotificationRepository gestionnaireCvNotificationRepository;
     @Mock
+    private EtudiantOffreDecisionNotificationRepository etudiantOffreDecisionNotificationRepository;
+    @Mock
+    private ConvocationNotificationRepository convocationNotificationRepository;
+    @Mock
+    private CandidatureDecisionNotificationRepository candidatureDecisionNotificationRepository;
+    @Mock
+    private SignatureEntenteNotificationRepository signatureEntenteNotificationRepository;
+    @Mock
     private NotificationsHelper notificationsHelper;
 
     @InjectMocks
     private GestionnaireService gestionnaireService;
     @InjectMocks
     private EtudiantService etudiantService;
+    @InjectMocks
+    private EmployeurService employeurService;
 
     @BeforeEach
     void setUpNotificationsHelper() {
@@ -65,28 +76,48 @@ class NotificationsServiceLayerTest {
     void getNotifications_returnsNotifications() throws Exception {
         StageNotification n1 = new StageNotification();
         n1.setType(NotificationType.STAGE_NOTIFICATION);
-        n1.setMessage("Stage submitted");
+        n1.setMessageEN("Stage submitted");
         n1.setCreatedAt(LocalDateTime.now());
 
         StageNotification n2 = new StageNotification();
         n2.setType(NotificationType.STAGE_NOTIFICATION);
-        n2.setMessage("Stage updated");
+        n2.setMessageEN("Stage updated");
         n2.setCreatedAt(LocalDateTime.now());
 
         PostulationNotification n3 = new PostulationNotification();
         n3.setType(NotificationType.POSTULATION_NOTIFICATION);
-        n3.setMessage("New application");
+        n3.setMessageEN("New application");
         n3.setCreatedAt(LocalDateTime.now());
 
         GestionnaireCvNotification n4 = new GestionnaireCvNotification();
         n4.setType(NotificationType.GESTIONNAIRE_CV_NOTIFICATION);
-        n4.setMessage("New CV uploaded");
+        n4.setMessageEN("New CV uploaded");
         n4.setCreatedAt(LocalDateTime.now());
 
         EtudiantCvNotification n5 = new EtudiantCvNotification();
         n5.setType(NotificationType.ETUDIANT_CV_NOTIFICATION);
-        n5.setMessage("CV processed");
+        n5.setMessageEN("CV processed");
         n5.setCreatedAt(LocalDateTime.now());
+
+        EtudiantOffreDecisionNotification n6 = new EtudiantOffreDecisionNotification();
+        n6.setType(NotificationType.ETUDIANT_OFFRE_DECCISION_NOTIFICATION);
+        n6.setMessageEN("Offer decision made");
+        n6.setCreatedAt(LocalDateTime.now());
+
+        ConvocationNotification n7 = new ConvocationNotification();
+        n7.setType(NotificationType.CONVOCATION_NOTIFICATION);
+        n7.setMessageEN("New convocation");
+        n7.setCreatedAt(LocalDateTime.now());
+
+        CandidatureDecisionNotification n8 = new CandidatureDecisionNotification();
+        n8.setType(NotificationType.CANDIDATURE_DECISION_NOTIFICATION);
+        n8.setMessageEN("Candidature decision made");
+        n8.setCreatedAt(LocalDateTime.now());
+
+        SignatureEntenteNotification n9 = new SignatureEntenteNotification();
+        n9.setType(NotificationType.SIGNATURE_ENTENTE_NOTIFICATION);
+        n9.setMessageEN("Entente needs to be signed");
+        n9.setCreatedAt(LocalDateTime.now());
 
         when(notificationRepository.findNotificationsByTypeAndFirstRecipientReadAt(NotificationType.STAGE_NOTIFICATION, null))
                 .thenReturn(List.of(n1, n2));
@@ -102,29 +133,58 @@ class NotificationsServiceLayerTest {
                 "dummy@email.com"
         )).thenReturn(List.of(n5));
 
+        when(etudiantOffreDecisionNotificationRepository.findByEmployeurResponseEmailAndFirstRecipientReadAt(
+                "dummy@email.com",
+                null
+        )).thenReturn(List.of(n6));
+
+        when(convocationNotificationRepository.findByFirstRecipientReadAtAndEtudiantConvocationEmail(
+                null,
+                "dummy@email.com"
+        )).thenReturn(List.of(n7));
+
+        when(candidatureDecisionNotificationRepository.findCandidatureDecisionNotificationsByFirstRecipientReadAtAndCandidatureDecisionEtudiantEmail(
+                null,
+                "dummy@email.com"
+        )).thenReturn(List.of(n8));
+
+        when(signatureEntenteNotificationRepository.findSignatureEntenteNotificationsBySecondRecipientReadAtAndSignatureEntenteEtudiantEmail(
+                null,
+                "dummy@email.com"
+        )).thenReturn(List.of(n9));
+
+        when(signatureEntenteNotificationRepository.findSignatureEntenteNotificationsBySecondRecipientReadAtAndSignatureEntenteEtudiantEmail(
+                null,
+                "dummy@email.com"
+        )).thenReturn(List.of(n9));
+
         NotificationsResponseDTO gestionnaireResult = gestionnaireService.getGestionnaireNotifications();
         NotificationsResponseDTO etudiantResult = etudiantService.getStudentsNotifications("dummy@email.com");
+        NotificationsResponseDTO employeurResult = employeurService.getEmployeurNotifications("dummy@email.com");
 
         assertThat(gestionnaireResult).isNotNull();
         assertThat(gestionnaireResult.getTotalCount()).isEqualTo(4);
-        assertThat(gestionnaireResult.getGroups()).hasSize(3);
+        assertThat(gestionnaireResult.getGroups()).hasSize(6);
         assertThat(gestionnaireResult.getGroups().get(0).getItems()).hasSize(2);
-        assertThat(gestionnaireResult.getGroups().get(0).getItems().getFirst().getMessage()).isEqualTo("Stage submitted");
-        assertThat(gestionnaireResult.getGroups().get(1).getItems().getFirst().getMessage()).isEqualTo("New application");
-        assertThat(gestionnaireResult.getGroups().get(2).getItems().getFirst().getMessage()).isEqualTo("New CV uploaded");
+        assertThat(gestionnaireResult.getGroups().get(0).getItems().getFirst().getMessageEN()).isEqualTo("Stage submitted");
+        assertThat(gestionnaireResult.getGroups().get(1).getItems().getFirst().getMessageEN()).isEqualTo("New application");
+        assertThat(gestionnaireResult.getGroups().get(2).getItems().getFirst().getMessageEN()).isEqualTo("New CV uploaded");
 
         assertThat(etudiantResult).isNotNull();
-        assertThat(etudiantResult.getTotalCount()).isEqualTo(1);
-        assertThat(etudiantResult.getGroups()).hasSize(1);
+        assertThat(etudiantResult.getTotalCount()).isEqualTo(4);
+        assertThat(etudiantResult.getGroups()).hasSize(4);
         assertThat(etudiantResult.getGroups().getFirst().getItems()).hasSize(1);
-        assertThat(etudiantResult.getGroups().getFirst().getItems().getFirst().getMessage()).isEqualTo("CV processed");
+        assertThat(etudiantResult.getGroups().getFirst().getItems().getFirst().getMessageEN()).isEqualTo("CV processed");
+        assertThat(etudiantResult.getGroups().get(1).getItems().getFirst().getMessageEN()).isEqualTo("New convocation");
+        assertThat(etudiantResult.getGroups().get(2).getItems().getFirst().getMessageEN()).isEqualTo("Candidature decision made");
+        assertThat(etudiantResult.getGroups().get(2).getItems().getFirst().getMessageEN()).isEqualTo("Entente needs to be signed");
 
-        verify(etudiantCvNotificationRepository, times(1))
-                .findEtudiantCvNotificationsByFirstRecipientReadAtAndEtudiantEmail(
-                        null,
-                        "dummy@email.com");
-        verify(notificationRepository, times(1))
-                .findNotificationsByTypeAndFirstRecipientReadAt(NotificationType.STAGE_NOTIFICATION, null);
+        assertThat(employeurResult).isNotNull();
+        assertThat(employeurResult.getTotalCount()).isEqualTo(2);
+        assertThat(employeurResult.getGroups()).hasSize(2);
+        assertThat(employeurResult.getGroups().getFirst().getItems()).hasSize(1);
+        assertThat(employeurResult.getGroups().getFirst().getItems().getFirst().getMessageEN()).isEqualTo("Offer decision made");
+        assertThat(employeurResult.getGroups().get(1).getItems().getFirst().getMessageEN()).isEqualTo("Entente needs to be signed");
     }
 
     @Test
@@ -142,23 +202,23 @@ class NotificationsServiceLayerTest {
 
     @Test
     @DisplayName("markPostulationAsReadBySecondRecipient() sets secondRecipientReadAt and saves")
-    void markPostulationAsReadBySecondRecipient_setsReadAtAndSaves() throws Exception {
-        PostulationNotification notification = new PostulationNotification();
+    void markNotificationAsReadBySecondRecipient_setsReadAtAndSaves() throws Exception {
+        Notification notification = new PostulationNotification();
         notification.setId(1L);
 
-        when(postulationNotificationRepository.findById(1L)).thenReturn(java.util.Optional.of(notification));
+        when(notificationRepository.findById(1L)).thenReturn(java.util.Optional.of(notification));
 
         gestionnaireService.markPostulationAsReadBySecondRecipient(1L);
 
         assertThat(notification.getSecondRecipientReadAt()).isNotNull();
-        verify(postulationNotificationRepository, times(1)).findById(1L);
+        verify(notificationRepository, times(1)).findById(1L);
         verify(notificationRepository, times(1)).save(notification);
     }
 
     @Test
     @DisplayName("markPostulationAsReadBySecondRecipient() throws NotificationFetchException when not found")
-    void markPostulationAsReadBySecondRecipient_notFound_throws() {
-        when(postulationNotificationRepository.findById(1L)).thenReturn(java.util.Optional.empty());
+    void markNotificationAsReadBySecondRecipient_notFound_throws() {
+        when(notificationRepository.findById(1L)).thenReturn(java.util.Optional.empty());
 
         assertThatThrownBy(() -> gestionnaireService.markPostulationAsReadBySecondRecipient(1L))
                 .isInstanceOf(NotificationExceptions.NotificationFetchException.class);
@@ -168,17 +228,17 @@ class NotificationsServiceLayerTest {
 
     @Test
     @DisplayName("markPostulationAsReadBySecondRecipient() wraps save failures into NotificationFetchException")
-    void markPostulationAsReadBySecondRecipient_saveThrows_wrapsException() {
-        PostulationNotification notification = new PostulationNotification();
+    void markNotificationAsReadBySecondRecipient_saveThrows_wrapsException() {
+        Notification notification = new PostulationNotification();
         notification.setId(1L);
 
-        when(postulationNotificationRepository.findById(1L)).thenReturn(java.util.Optional.of(notification));
+        when(notificationRepository.findById(1L)).thenReturn(java.util.Optional.of(notification));
         doThrow(new RuntimeException("DB error")).when(notificationRepository).save(any());
 
         assertThatThrownBy(() -> gestionnaireService.markPostulationAsReadBySecondRecipient(1L))
                 .isInstanceOf(NotificationExceptions.NotificationFetchException.class);
 
-        verify(postulationNotificationRepository, times(1)).findById(1L);
+        verify(notificationRepository, times(1)).findById(1L);
         verify(notificationRepository, times(1)).save(any());
     }
 
